# art-tauri

./: README.md  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-nga-catalog.ts
src/: app.css  overlay.html  overlay.ts  settings.html  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: nga_catalog.json
src-tauri/src/: art_api.rs  art_cache.rs  commands.rs  hotkey.rs  lib.rs  windows.rs
src/lib/: types.ts
src/lib/components/: ArtOverlay.svelte  SettingsPanel.svelte
